TipTac Changes | 2017 Oct 10
----------------------------
- Updated the TOC version to 70300 for the 7.3 patch.
- Options: Fixed the PlaySound() API call, which was changed in the 7.3.0 patch. Thanks insectKR.

TipTac Changes | 2016 Oct 27
----------------------------
- Updated the TOC version to 70100 for the 7.1 patch.
- Fixed errors caused by calling "GetAttribute" on widgets that does not have this method. Thanks oppizippy.
- Added a workaround that should help with making the WorldMapTooltip and the QuestScrollFrame appear as other tooltips configured by TipTac.

TipTac Changes | 2016 Aug 30
----------------------------
- TipTacItemRef: Fixed issue with incorrect itemLevel showing for items that have been upgraded.

TipTac Changes | 2016 Aug 24
----------------------------
- TipTacItemRef: Fixed certain items with upgrades not displaying their upgraded ID.

TipTac Changes | 2016 Jul 23
----------------------------
- Fixed a few more API changes related to SetTexture -> SetColorTexture. Thanks vincentSDSH.
- Options: Fixed menu dropdowns appearing behind other frames. Thanks again vincentSDSH.

TipTac Changes | 2016 Jul 21
----------------------------
- TOC version updated to 70000 for the Legion 7.0.3 pre-patch.
- Updated the API usage to fit with the changes in the 7.0.3 patch.

TipTac Changes | 2015 Dec 07
----------------------------
- Added an option for battle pet tips, under the "Special" category. If you encounter issues with battle pet tips, disable this.
- The TipTacItemRef addon has been updated to fix the itemLevel issues with Timewarped items. If you still encounter issues with itemLevels, disable the "Show Item Level & ID" setting under the TipTacOptions.

TipTac Changes | 2015 Jul 02
----------------------------
- TOC version changed to 60200 for the 6.2 patch.

TipTac Changes | 2015 Mar 04
----------------------------
- TOC version updated to 60100 for the 6.1 patch.